--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,9 +17,13 @@
     "serve": "vite preview"
   },
   "devDependencies": {
+    "@tailwindcss/forms": "^0.5.10",
     "@vitejs/plugin-react-swc": "^3.5.0",
+    "autoprefixer": "^10.4.22",
     "eslint": "^8.56.0",
     "eslint-config-react-app": "^7.0.1",
+    "postcss": "^8.5.6",
+    "tailwindcss": "^3.4.18",
     "vite": "^5.0.12",
     "vite-plugin-eslint": "^1.8.1"
   }
