--- a/backend/package.json
+++ b/backend/package.json
@@ -29,6 +29,7 @@
     "body-parser": "^1.20.2",
     "express": "^4.18.2",
     "nanoid": "^5.0.4",
+    "socket.io": "^4.8.1",
     "uuid": "^9.0.1"
   },
   "devDependencies": {
